Update quote photographs and links
Change-Id: I3906867672fa662a727a06dbc5ace5a68860b5c7

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -34,7 +34,7 @@
   <blockquote>
     <p><%= t('content.quote') %></p>
     <footer>
-      <a href="//commons.wikimedia.org/wiki/File:Jay-Z_2011.jpg"><img src="/images/quote_jay.png"></a>
+      <a href="//commons.wikimedia.org/wiki/Benjamin_Franklin#mediaviewer/File:Benjamin_Franklin.PNG"><img src="/images/quote_franklin.png"></a>
       <p><%= t('content.cite') %></p>
     </footer>
   </blockquote>
@@ -121,7 +121,7 @@
   <blockquote>
     <p><%= t('content.forgotten_quote') %></p>
     <footer>
-      <a href="//en.wikipedia.org/wiki/Pamela_Samuelson#mediaviewer/File:Pamela_Samuelson,_2005.jpg"><img src="/images/quote_samuelson.png"></a>
+      <a href="//commons.wikimedia.org/wiki/File:Kyle-cassidy-neil-gaiman-April-2013.jpg"><img src="/images/quote_gaiman.png"></a>
       <p><%= t('content.forgotten_cite') %></p>
     </footer>
   </blockquote>
