--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -35,7 +35,7 @@
 	<blockquote>
 		<p><%= t('privacy.quote') %></p>
 		<footer>
-			<a href="//en.wikipedia.org/wiki/Oscar_Wilde#mediaviewer/File:Oscar_Wilde_Sarony.jpg"><img src="/images/quote_wilde.png"></a>
+			<a href="//commons.wikimedia.org/wiki/File:Niels_Bohr.jpg"><img src="/images/quote_bohr.png"></a>
 			<p><%= t('privacy.cite') %></p>
 		</footer>
 	</blockquote>
