Add stories page
Change-Id: Ic2a8a27e338776d86663963f92c919e2e73e1cb8

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -36,6 +36,7 @@
 						<ul class="nav navbar-nav navbar-right">
 							<li><%= navigation_link( t('menu.privacy'), locale_url('/privacy.html') ) %></li>
 							<li><%= navigation_link( t('menu.content'), locale_url('/content.html') ) %></li>
+							<li><%= navigation_link( t('menu.stories'), locale_url('/stories.html') ) %></li>
 							<li><%= navigation_link( t('menu.faq'), locale_url('/faq.html') ) %></li>
 						</ul>
 					</div>
