--- a/source/localizable/stories.html.erb
+++ b/source/localizable/stories.html.erb
@@ -5,3 +5,93 @@
     </span>
   </h1>
 </div>
+
+<!-- New Content Alteration -->
+<div class="col-md-4">
+  <div class="story">
+    <a href="//en.wikipedia.org/wiki/File:Myanmar_visa.jpg"><img src="/images/story_myanmar.png"></a>
+    <h3><%= t('content.story_myanmar_title') %></h3>
+    <p><%= t('content.story_myanmar_body') %></p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a href="//commons.wikimedia.org/wiki/File:Coffee_Berries.jpg"><img src="/images/story_coffee.png"></a>
+    <h3><%= t('content.story_coffee_title') %></h3>
+    <p><%= t('content.story_coffee_body') %></p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a href="//commons.wikimedia.org/wiki/File:Poster_of_Alexander_Crystal_Seer.jpg"><img src="/images/story_seer.png"></a>
+    <h3><%= t('content.story_seer_title') %></h3>
+    <p><%= t('content.story_seer_body') %></p>
+  </div>
+</div>
+
+<div class="clear"></div>
+<br><br>
+
+<!-- Old Content Alteration -->
+<div class="col-md-4">
+  <div class="story">
+    <a href="//fr.wikipedia.org/wiki/Station_hertzienne_militaire_de_Pierre-sur-Haute#mediaviewer/Fichier:Base_militaire_de_Pierre-sur-Haute.jpg"><img src="/images/story_dcri.png"></a>
+    <h3><%= t('content.story1_title') %></h3>
+    <p><%= t('content.story1_body') %></p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a href="//commons.wikimedia.org/wiki/Commons:Featured_picture_candidates/File:Macaca_nigra_self-portrait_%28rotated_and_cropped%29.jpg#File:Macaca_nigra_self-portrait_.28rotated_and_cropped.29.jpg"><img src="/images/story_monkey.png"></a>
+    <h3><%= t('content.story2_title') %></h3>
+    <p><%= t('content.story2_body') %></p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a href="//en.wikipedia.org/wiki/Mount_Wellington_%28Tasmania%29#mediaviewer/File:Mount_Wellington.jpg"><img src="/images/story_aboriginal.png"></a>
+    <h3><%= t('content.story3_title') %></h3>
+    <p><%= t('content.story3_body') %></p>
+  </div>
+</div>
+
+<div class="clear"></div>
+<br><br>
+
+<!-- Old DMCA -->
+<div class="col-md-4">
+  <div class="story">
+    <a href="//en.wikipedia.org/wiki/Babe_Ruth%27s_called_shot#mediaviewer/File:Ruth1932-1.jpg"><img src="/images/story_ruth.png"></a>
+    <h3>
+      <%= t('content.s_t_babe_ruth') %>
+    </h3>
+    <%= t('content.s_s_babe_ruth') %>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <img src="/images/story_obama.png">
+    <h3>
+      <%= t('content.s_t_obama') %>
+    </h3>
+      <%= t('content.s_s_obama') %>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a href="//commons.wikimedia.org/wiki/Jane_Austen#mediaviewer/File:Jane_Austen_coloured_version.jpg"><img src="/images/story_classics.png"></a>
+    <h3>
+      <%= t('content.s_t_classic') %>
+    </h3>
+    <%= t('content.s_s_classic') %>
+  </div>
+</div>
+
+<div class="clear"></div>
+<br><br>
