stories: Add voluntary disclosure stories
Change-Id: If2a678879205168ce8f795222119ca51d33683a9

--- a/source/localizable/stories.html.erb
+++ b/source/localizable/stories.html.erb
@@ -62,6 +62,34 @@
 <div class="clear"></div>
 <br><br>
 
+<!-- New Voluntary Disclosure -->
+<div class="col-md-4">
+  <div class="story">
+    <a href="//commons.wikimedia.org/wiki/File:LED_Verkehrssicherungsbalken.jpg"><img src="/images/story_emergency.png"></a>
+    <h3><%= t('privacy.story_emergency_title') %></h3>
+    <p><%= t('privacy.story_emergency_body') %></p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a href="//commons.wikimedia.org/wiki/White_House#mediaviewer/File:SouthPorticoChristmas.jpg"><img src="/images/story_whitehouse.png"></a>
+    <h3><%= t('privacy.story_whitehouse_title') %></h3>
+    <p><%= t('privacy.story_whitehouse_body') %></p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a href="//commons.wikimedia.org/wiki/File:Suicide_Prevention_Day.jpg"><img src="/images/story_suicide.png"></a>
+    <h3><%= t('privacy.story_suicide_title') %></h3>
+    <p><%= t('privacy.story_suicide_body') %></p>
+  </div>
+</div>
+
+<div class="clear"></div>
+<br><br>
+
 
 <!-- Old Content Alteration -->
 <div class="col-md-4">
