content: Update with new stories
Change-Id: I7ff2dd01a9b15a1de3683c9e0e54d243dc1c3873

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -42,25 +42,25 @@
 
 <div class="col-md-4">
   <div class="story">
-    <a href="//fr.wikipedia.org/wiki/Station_hertzienne_militaire_de_Pierre-sur-Haute#mediaviewer/Fichier:Base_militaire_de_Pierre-sur-Haute.jpg"><img src="/images/story_dcri.png"></a>
-    <h3><%= t('content.story1_title') %></h3>
-    <p><%= t('content.story1_body') %></p>
+    <a href="//en.wikipedia.org/wiki/File:Myanmar_visa.jpg"><img src="/images/story_myanmar.png"></a>
+    <h3><%= t('content.story_myanmar_title') %></h3>
+    <p><%= t('content.story_myanmar_body') %></p>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="story">
-    <a href="//commons.wikimedia.org/wiki/Commons:Featured_picture_candidates/File:Macaca_nigra_self-portrait_%28rotated_and_cropped%29.jpg#File:Macaca_nigra_self-portrait_.28rotated_and_cropped.29.jpg"><img src="/images/story_monkey.png"></a>
-    <h3><%= t('content.story2_title') %></h3>
-    <p><%= t('content.story2_body') %></p>
+    <a href="//commons.wikimedia.org/wiki/File:Coffee_Berries.jpg"><img src="/images/story_coffee.png"></a>
+    <h3><%= t('content.story_coffee_title') %></h3>
+    <p><%= t('content.story_coffee_body') %></p>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="story">
-    <a href="//en.wikipedia.org/wiki/Mount_Wellington_%28Tasmania%29#mediaviewer/File:Mount_Wellington.jpg"><img src="/images/story_aboriginal.png"></a>
-    <h3><%= t('content.story3_title') %></h3>
-    <p><%= t('content.story3_body') %></p>
+    <a href="//commons.wikimedia.org/wiki/File:Poster_of_Alexander_Crystal_Seer.jpg"><img src="/images/story_seer.png"></a>
+    <h3><%= t('content.story_seer_title') %></h3>
+    <p><%= t('content.story_seer_body') %></p>
   </div>
 </div>
 
@@ -162,33 +162,28 @@
 
 <div class="col-md-4">
   <div class="story">
-    <a href="//en.wikipedia.org/wiki/Babe_Ruth%27s_called_shot#mediaviewer/File:Ruth1932-1.jpg"><img src="/images/story_ruth.png"></a>
-    <h3>
-      <%= t('content.s_t_babe_ruth') %>
-    </h3>
-    <%= t('content.s_s_babe_ruth') %>
+    <a href="//commons.wikimedia.org/wiki/File:Image_deleted_DMCA_on_black.png"><img src="/images/story_dmca.png"></a>
+    <h3><%= t('content.story_dmca_title') %></h3>
+    <p><%= t('content.story_dmca_body') %></p>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="story">
-    <img src="/images/story_obama.png">
-    <h3>
-      <%= t('content.s_t_obama') %>
-    </h3>
-      <%= t('content.s_s_obama') %>
+    <img src="/images/story_missing.png">
+    <h3><%= t('content.story_mistake_title') %></h3>
+    <p><%= t('content.story_mistake_body') %></p>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="story">
-    <a href="//commons.wikimedia.org/wiki/Jane_Austen#mediaviewer/File:Jane_Austen_coloured_version.jpg"><img src="/images/story_classics.png"></a>
-    <h3>
-      <%= t('content.s_t_classic') %>
-    </h3>
-    <%= t('content.s_s_classic') %>
+    <a href="//commons.wikimedia.org/wiki/File:Audio_Sound_Arts_Studio_Control_Room.jpg"><img src="/images/story_studio.png"></a>
+    <h3><%= t('content.story_studio_title') %></h3>
+    <p><%= t('content.story_studio_body') %></p>
   </div>
 </div>
+
 
 <div class="clear"></div>
 
