--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -193,9 +193,10 @@
 		<h2><%= t('content.graph_dmca_requests') %></h2>
 		<ul class="tabs">
 			<li><a class="dmca_requests_tabs" id="dmca_requests_all" href="javascript: void(0);"><%= t('dates.all') %></a></li>
-			<li><a class="active dmca_requests_tabs" id="dmca_requests_jul12jun13" href="javascript: void(0);"><%= t('dates.jul') %> 2012 - <%= t('dates.jun') %> 2013</a></li>
-			<li><a class="dmca_requests_tabs" id="dmca_requests_juldec13" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2013</a></li>
+			<li><a class="active dmca_requests_tabs" id="dmca_requests_juldec14" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2014</a></li>
 			<li><a class="dmca_requests_tabs" id="dmca_requests_janjun14" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2014</a></li>
+			<li><a class="dmca_requests_tabs" id="dmca_requests_juldec13" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2013</a></li>
+			<li><a class="dmca_requests_tabs" id="dmca_requests_jul12jun13" href="javascript: void(0);"><%= t('dates.jul') %> 2012 - <%= t('dates.jun') %> 2013</a></li>
 		</ul>
 
 		<div class="col-md-4" id="dmca_requests_legend">
