--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -76,9 +76,20 @@
 			<li><a class="where_from_tabs" id="where_from_juldec13" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2013</a></li>
 			<li><a class="where_from_tabs" id="where_from_janjun14" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2014</a></li>
 		</ul>
-		<div class="graph">
+
+		<div class="col-md-4" id="where_from_legend">
+			<h3><%= t('content.request_granted') %></h3>
+			<div>
+				<p class="legend legend_yes"><%= t('yn.yess') %></p>
+				<p class="legend legend_no"><%= t('yn.noo') %></p>
+			</div>
+		</div>
+
+		<div class="col-md-7">
 			<div id="where_from_graph" class="bar_graph_horizontal"></div>
 		</div>
+		<div class="clear"></div>
+
 	</div>
 
 
