--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -232,9 +232,19 @@
 			<li><a class="active targeted_dmca_tabs" id="targeted_dmca_juldec13" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2013</a></li>
 			<li><a class="targeted_dmca_tabs" id="targeted_dmca_janjun14" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2014</a></li>
 		</ul>
-		<div class="graph">
+
+		<div class="col-md-4" id="targeted_dmca_granted">
+			<h3><%= t('content.request_granted') %></h3>
+			<div>
+				<p class="legend legend_yes"><%= t('yn.yess') %></p>
+				<p class="legend legend_no"><%= t('yn.noo') %></p>
+			</div>
+		</div>
+
+		<div class="col-md-7">
 			<div id="targeted_dmca_graph" class="bar_graph_horizontal"></div>
 		</div>
+		<div class="clear"></div>
 	</div>
 </div>
 
