content:where_from: Add new data - Update locales - Update tabs - Update flags
Change-Id: I7409882869de4268952b46c5ab8007c4cf798a16

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -72,9 +72,10 @@
 		<h2><%= t('content.graph_where_from') %></h2>
 		<ul class="tabs">
 			<li><a class="where_from_tabs" id="where_from_all" href="javascript: void(0);"><%= t('dates.all') %></a></li>
-			<li><a class="active where_from_tabs" id="where_from_jul12jun13" href="javascript: void(0);"><%= t('dates.jul') %> 2012 - <%= t('dates.jun') %> 2013</a></li>
+			<li><a class="where_from_tabs" id="where_from_jul12jun13" href="javascript: void(0);"><%= t('dates.jul') %> 2012 - <%= t('dates.jun') %> 2013</a></li>
 			<li><a class="where_from_tabs" id="where_from_juldec13" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2013</a></li>
 			<li><a class="where_from_tabs" id="where_from_janjun14" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2014</a></li>
+			<li><a class="where_from_tabs active" id="where_from_juldec14" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2014</a></li>
 		</ul>
 
 		<div class="col-md-4" id="where_from_legend">
@@ -303,6 +304,15 @@
 <input type="hidden" id="t_norway" value="<%= t('graph.norway') %>">
 <input type="hidden" id="t_slovenia" value="<%= t('graph.slovenia') %>">
 <input type="hidden" id="t_peru" value="<%= t('graph.peru') %>">
+<input type="hidden" id="t_china" value="<%= t('graph.china') %>">
+<input type="hidden" id="t_czech_republic" value="<%= t('graph.czech_republic') %>">
+<input type="hidden" id="t_ukraine" value="<%= t('graph.ukraine') %>">
+<input type="hidden" id="t_greece" value="<%= t('graph.greece') %>">
+<input type="hidden" id="t_japan" value="<%= t('graph.japan') %>">
+<input type="hidden" id="t_sweden" value="<%= t('graph.sweden') %>">
+<input type="hidden" id="t_cyprus" value="<%= t('graph.cyprus') %>">
+<input type="hidden" id="t_turkey" value="<%= t('graph.turkey') %>">
+<input type="hidden" id="t_sri_lanka" value="<%= t('graph.sri_lanka') %>">
 <input type="hidden" id="t_bangladesh" value="<%= t('graph.bangladesh') %>">
 
 <input type="hidden" id="t_english_wikipedia" value="<%= t('graph.english_wikipedia') %>">
