content:targeted_takedown: Update data - Update locale - Update data - Update tabs
Change-Id: I23b3f0df3e4014e7aec10bafcfc0ba5ba67a1885

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -98,8 +98,9 @@
 		<h2><%= t('content.graph_targeted_takedown') %></h2>
 		<ul class="tabs">
 			<li><a class="targeted_takedown_tabs" id="targeted_takedown_all" href="javascript: void(0);"><%= t('dates.all') %></a></li>
-			<li><a class="active targeted_takedown_tabs" id="targeted_takedown_juldec13" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2013</a></li>
+			<li><a class="targeted_takedown_tabs" id="targeted_takedown_juldec13" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2013</a></li>
 			<li><a class="targeted_takedown_tabs" id="targeted_takedown_janjun14" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2014</a></li>
+			<li><a class="active targeted_takedown_tabs" id="targeted_takedown_juldec14" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2014</a></li>
 		</ul>
 
 		<div class="col-md-4" id="targeted_takedown_legend">
@@ -337,6 +338,17 @@
 <input type="hidden" id="t_no_project_named" value="<%= t('graph.no_project_named') %>">
 <input type="hidden" id="t_russian_wikipedia" value="<%= t('graph.russian_wikipedia') %>">
 <input type="hidden" id="t_slovenian_wikipedia" value="<%= t('graph.slovenian_wikipedia') %>">
+<input type="hidden" id="t_multiple" value="<%= t('graph.multiple') %>">
+<input type="hidden" id="t_not_a_wmf_site" value="<%= t('graph.not_a_wmf_site') %>">
+<input type="hidden" id="t_korean_wikipedia" value="<%= t('graph.korean_wikipedia') %>">
+<input type="hidden" id="t_turkish_wikipedia" value="<%= t('graph.turkish_wikipedia') %>">
+<input type="hidden" id="t_hebrew_wikipedia" value="<%= t('graph.hebrew_wikipedia') %>">
+<input type="hidden" id="t_slovak_wikipedia" value="<%= t('graph.slovak_wikipedia') %>">
+<input type="hidden" id="t_korean_wikinews" value="<%= t('graph.korean_wikinews') %>">
+<input type="hidden" id="t_english_wikinews" value="<%= t('graph.english_wikinews') %>">
+<input type="hidden" id="t_serbian_wikipedia" value="<%= t('graph.serbian_wikipedia') %>">
+
+
 
 <input type="hidden" id="t_one_case_was_american_brazilian" value="<%= t('graph.one_case_was_american_brazilian') %>">
 <input type="hidden" id="t_one_case_was_british_swiss" value="<%= t('graph.one_case_was_british_swiss') %>">
