content:targeted_dmca: Update data and tabs
Change-Id: Ifae7b0429f31e94ce7bde95e772669e6575adcd0

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -243,8 +243,9 @@
 		<h2><%= t('content.graph_targeted_dmca') %></h2>
 		<ul class="tabs">
 			<li><a class="targeted_dmca_tabs" id="targeted_dmca_all" href="javascript: void(0);"><%= t('dates.all') %></a></li>
-			<li><a class="active targeted_dmca_tabs" id="targeted_dmca_juldec13" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2013</a></li>
+			<li><a class="targeted_dmca_tabs" id="targeted_dmca_juldec13" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2013</a></li>
 			<li><a class="targeted_dmca_tabs" id="targeted_dmca_janjun14" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2014</a></li>
+			<li><a class="active targeted_dmca_tabs" id="targeted_dmca_juldec14" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2014</a></li>
 		</ul>
 
 		<div class="col-md-4" id="targeted_dmca_granted">
