Move the requestsAndGranted method into different file
Change-Id: I67bab82a3b198e38aef7dc3eab0ee4e00cfd5c82

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -361,4 +361,5 @@
 <input type="hidden" id="t_one_case_was_spanish_italian" value="<%= t('graph.one_case_was_spanish_italian') %>">
 <input type="hidden" id="t_one_case_was_serbo_croat" value="<%= t('graph.one_case_was_serbo_croat') %>">
 
+<script src="/javascripts/rag.js"></script>
 <script src="/javascripts/content.js"></script>
