--- a/source/localizable/faq.html.erb
+++ b/source/localizable/faq.html.erb
@@ -79,6 +79,12 @@
 
 	<hr>
 
+	<a name="national_security_request"></a>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_national_security_request') %></span></h2>
+	<div class="answer"><%= t('faq.a_national_security_request') %></div>
+
+	<hr>
+
 	<a name="potentially_affected"></a>
 	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_potentially_affected') %></span></h2>
 	<div class="answer"><%= t('faq.a_potentially_affected') %></div>
