Add voluntary_disclosure to FAQ
Change-Id: I6c1c6b1ea82f8f29efcd6fe210700984a68f14d7

--- a/source/localizable/faq.html.erb
+++ b/source/localizable/faq.html.erb
@@ -97,6 +97,12 @@
 
 	<hr>
 
+	<a name="voluntary_disclosure"></a>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_voluntary_disclosure') %></span></h2>
+	<div class="answer"><%= t('faq.a_voluntary_disclosure') %></div>
+
+	<hr>
+
 	<a name="different_compare"></a>
 	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_different_compare') %></span></h2>
 	<div class="answer"><%= t('faq.a_different_compare') %></div>
