--- a/source/localizable/faq.html.erb
+++ b/source/localizable/faq.html.erb
@@ -103,6 +103,12 @@
 
 	<hr>
 
+	<a name="right_forgotten"></a>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_right_forgotten') %></span></h2>
+	<div class="answer"><%= t('faq.a_right_forgotten') %></div>
+
+	<hr>
+
 	<a name="different_compare"></a>
 	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_different_compare') %></span></h2>
 	<div class="answer"><%= t('faq.a_different_compare') %></div>
