--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -40,14 +40,14 @@
 		</footer>
 	</blockquote>
 
-	<div id="summary_table" class="story">
+	<div class="story summary_table">
 		<h3>
 			<small><%= t('dates.jul') %> 2014 – <%= t('dates.dec') %> 2014</small><br />
 			<%= t('privacy.summary') %>
 		</h3>
 		<hr />
 		<table>
-			<tr>
+			<tr class="highlight">
 				<td><%= t('privacy.total_number_of_requests') %></td>
 				<td>28</td>
 			</tr>
@@ -79,15 +79,15 @@
 				<td class="indent"><a href="/faq.html#court_order"><%= t('privacy.court_orders') %></a></td>
 				<td>0</td>
 			</tr>
-			<tr>
+			<tr class="highlight">
 				<td><%= t('privacy.information_produced') %></td>
 				<td>1</td>
 			</tr>
-			<tr>
+			<tr class="highlight">
 				<td><%= t('privacy.user_potentially_affected') %></td>
 				<td>2157</td>
 			</tr>
-			<tr>
+			<tr class="highlight">
 				<td><%= t('privacy.user_actually_affected') %></td>
 				<td>2121</td>
 			</tr>
@@ -147,6 +147,79 @@
 	</div>
 
 </div>
+
+<div class="col-md-8 col-md-offset-2">
+	<div class="story">
+		<h3>
+			<small><%= t('dates.jul') %> 2014 – <%= t('dates.dec') %> 2014</small><br />
+			<%= t('privacy.summary') %>
+		</h3>
+		<hr />
+		<table>
+			<tr class="highlight">
+				<td><%= t('graph.informal_government_requests') %></td>
+				<td>11</td>
+				<td>
+			</tr>
+			<tr>
+				<td class="indent"><%= t('graph.usa') %></td>
+				<td>1</td>
+				<td><%= t('graph.local_police') %></td>
+			</tr>
+			<tr>
+				<td class="indent"></td>
+				<td>1</td>
+				<td><%= t('graph.local_police') %></td>
+			</tr>
+			<tr>
+				<td class="indent"><%= t('graph.france') %></td>
+				<td>4</td>
+				<td><%= t('graph.local_police') %></td>
+			</tr>
+			<tr>
+				<td class="indent"><%= t('graph.italy') %></td>
+				<td>1</td>
+				<td><%= t('graph.local_police') %></td>
+			</tr>
+			<tr>
+				<td class="indent"></td>
+				<td>2</td>
+				<td><%= t('graph.federal_police') %></td>
+			</tr>
+			<tr>
+				<td class="indent"><%= t('graph.brazil') %></td>
+				<td>1</td>
+				<td><%= t('graph.executive_office') %></td>
+			</tr>
+			<tr>
+				<td class="indent"><%= t('graph.israel') %></td>
+				<td>1</td>
+				<td><%= t('graph.municipal_government') %></td>
+			</tr>
+			<tr class="highlight">
+				<td><%= t('graph.warrant') %></td>
+				<td>1</td>
+				<td>
+			</tr>
+			<tr>
+				<td class="indent"><%= t('graph.usa') %></td>
+				<td>1</td>
+				<td><%= t('graph.doj') %></td>
+			</tr>
+			<tr class="highlight">
+				<td><%= t('graph.criminal_subpoenas') %></td>
+				<td>1</td>
+				<td>
+			</tr>
+			<tr>
+				<td class="indent"><%= t('graph.usa') %></td>
+				<td>1</td>
+				<td><%= t('graph.doj') %></td>
+			</tr>
+		</table>
+	</div>
+</div>
+
 
 <div class="clear"></div>
 <br /> <br /> <br /> <br />
