privacy: Update graph, data and dates
Change-Id: I36b4036452781830a826cd7edb4dca8982ecc01a

--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -123,9 +123,10 @@
 		<h2><%= t('privacy.request_response') %></h2>
 		<ul class="tabs">
 			<li><a id="user_data_all" class="user_data_tabs" href="javascript: void(0);"><%= t('dates.all') %></a></li>
-			<li><a id="user_data_jul12jun13" class="user_data_tabs active" href="javascript: void(0);"><%= t('dates.jul') %> 2012 - <%= t('dates.jun') %> 2013</a></li>
+			<li><a id="user_data_jul12jun13" class="user_data_tabs" href="javascript: void(0);"><%= t('dates.jul') %> 2012 - <%= t('dates.jun') %> 2013</a></li>
 			<li><a id="user_data_juldec13" class="user_data_tabs"  href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2013</a></li>
 			<li><a id="user_data_janjun14" class="user_data_tabs" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2014</a></li>
+			<li><a id="user_data_juldec14" class="user_data_tabs active" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2014</a></li>
 		</ul>
 		<div class="graph">
 			<div class="row">
@@ -307,6 +308,7 @@
 <input type="hidden" id="t_informal_non_government_requests" value="<%= t('graph.informal_non_government_requests') %>">
 <input type="hidden" id="t_civil_subpoenas" value="<%= t('graph.civil_subpoenas') %>">
 <input type="hidden" id="t_informal_government_requests" value="<%= t('graph.informal_government_requests') %>">
+<input type="hidden" id="t_warrant" value="<%= t('graph.warrant') %>">
 
 <input type="hidden" id="t_physical_threats" value="<%= t('graph.physical_threats') %>">
 <input type="hidden" id="t_suicide_threats" value="<%= t('graph.suicide_threats') %>">
