privacy: Add hidden input for the locale item - request_granted
Change-Id: I52eae3460fac9429baac32686c2c8b6725fffde4

--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -285,6 +285,7 @@
 
 <!-- Translations for JS -->
 <input type="hidden" id="t_total_requests" value="<%= t('privacy.total_requests') %>">
+<input type="hidden" id="t_request_granted" value="<%= t('graph.request_granted') %>">
 <input type="hidden" id="t_information_produced" value="<%= t('privacy.information_produced') %>">
 <input type="hidden" id="t_usa" value="<%= t('graph.usa') %>">
 <input type="hidden" id="t_united_kingdom" value="<%= t('graph.united_kingdom') %>">
