content: Update scorecard numers
Change-Id: I1ef74c0b25eadf97ba1aff1a483270b9f1c2f395

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -8,18 +8,18 @@
 
 <div class="col-md-3">
   <section class="scorecard">
-    <h2><%= t('dates.jul') %> 2012 – <%= t('dates.jun') %> 2014</h2>
+    <h2><%= t('dates.jul') %> 2014 – <%= t('dates.dec') %> 2014</h2>
     <dl>
       <dt><%= t('content.total_number_of_requests') %></dt>
-      <dd>304</dd>
+      <dd>190</dd>
     </dl>
   </section>
 
   <section class="scorecard scorecard_bottom">
-    <h2><%= t('dates.jul') %> 2012 – <%= t('dates.jun') %> 2014</h2>
+    <h2><%= t('dates.jul') %> 2014 – <%= t('dates.dec') %> 2014</h2>
     <dl>
       <dt><%= t('content.percentage_of_requests_granted') %></dt>
-      <dd>0<small>%</small></dd>
+      <dd>.52<small>%</small></dd>
     </dl>
   </section>
 </div>
