privacy: Updates to the "Government Requests" table
Change-Id: I0caec55e9ccb45f41d383ef194185887a0a74832

--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -153,7 +153,7 @@
 	<div class="story">
 		<h3>
 			<small><%= t('dates.jul') %> 2014 – <%= t('dates.dec') %> 2014</small><br />
-			<%= t('privacy.summary') %>
+			<%= t('privacy.govt_requests') %>
 		</h3>
 		<hr />
 		<table>
@@ -170,7 +170,7 @@
 			<tr>
 				<td class="indent"></td>
 				<td>1</td>
-				<td><%= t('graph.local_police') %></td>
+				<td><%= t('graph.federal_agency') %></td>
 			</tr>
 			<tr>
 				<td class="indent"><%= t('graph.france') %></td>
