content: Add summary table for takedown requests
Change-Id: I11540ee80403df0b1238ad1d32bb2ad640e5c536

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -64,8 +64,59 @@
   </div>
 </div>
 
+
 <div class="clear"></div>
 
+<br><br>
+
+<div class="col-md-8 col-md-offset-2">
+	<div class="story">
+		<h3>
+			<small><%= t('dates.jul') %> 2014 – <%= t('dates.dec') %> 2014</small><br />
+			<%= t('home.content') %>
+		</h3>
+		<hr />
+		<table>
+			<tr>
+				<td><%= t('graph.usa') %></td>
+				<td>1</td>
+				<td><%= t('graph.federal_agency') %></td>
+			</tr>
+			<tr>
+				<td><%= t('graph.germany') %></td>
+				<td>1</td>
+				<td><%= t('graph.municipal_government') %></td>
+			</tr>
+			<tr>
+				<td><%= t('graph.united_kingdom') %></td>
+				<td>1</td>
+				<td><%= t('graph.uknmd') %></td>
+			</tr>
+			<tr>
+				<td><%= t('graph.brazil') %></td>
+				<td>1</td>
+				<td><%= t('graph.politicians_candidates') %></td>
+			</tr>
+			<tr>
+				<td><%= t('graph.malaysia') %></td>
+				<td>1</td>
+				<td><%= t('graph.ministry') %></td>
+			</tr>
+			<tr>
+				<td><%= t('graph.turkey') %></td>
+				<td>1</td>
+				<td><%= t('graph.ministry') %></td>
+			</tr>
+			<tr>
+				<td><%= t('graph.israel') %></td>
+				<td>1</td>
+				<td><%= t('graph.municipal_government') %></td>
+			</tr>
+		</table>
+	</div>
+</div>
+
+<div class="clear"></div>
 
 <div class="col-md-12">
 	<div class="analytics">
