privacy: Flip the column of the govt_requests graph and fix borders
Change-Id: Ia857970f89991111ab90a6ca8fea1ccf4dabcd7f

--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -159,63 +159,63 @@
 		<table>
 			<tr class="highlight">
 				<td><%= t('graph.informal_government_requests') %></td>
+				<td>Total</td>
 				<td>11</td>
-				<td>
 			</tr>
 			<tr>
-				<td class="indent"><%= t('graph.usa') %></td>
-				<td>1</td>
+				<td class="indent noborder"><%= t('graph.usa') %></td>
 				<td><%= t('graph.local_police') %></td>
+				<td>1</td>
 			</tr>
 			<tr>
 				<td class="indent"></td>
-				<td>1</td>
 				<td><%= t('graph.federal_agency') %></td>
+				<td>1</td>
 			</tr>
 			<tr>
 				<td class="indent"><%= t('graph.france') %></td>
-				<td>4</td>
 				<td><%= t('graph.local_police') %></td>
+				<td>4</td>
 			</tr>
 			<tr>
-				<td class="indent"><%= t('graph.italy') %></td>
-				<td>1</td>
+				<td class="indent noborder"><%= t('graph.italy') %></td>
 				<td><%= t('graph.local_police') %></td>
+				<td>1</td>
 			</tr>
 			<tr>
 				<td class="indent"></td>
-				<td>2</td>
 				<td><%= t('graph.federal_police') %></td>
+				<td>2</td>
 			</tr>
 			<tr>
 				<td class="indent"><%= t('graph.brazil') %></td>
-				<td>1</td>
 				<td><%= t('graph.executive_office') %></td>
+				<td>1</td>
 			</tr>
 			<tr>
 				<td class="indent"><%= t('graph.israel') %></td>
-				<td>1</td>
 				<td><%= t('graph.municipal_government') %></td>
+				<td>1</td>
 			</tr>
 			<tr class="highlight">
 				<td><%= t('graph.warrant') %></td>
+				<td></td>
 				<td>1</td>
-				<td>
 			</tr>
 			<tr>
 				<td class="indent"><%= t('graph.usa') %></td>
-				<td>1</td>
 				<td><%= t('graph.doj') %></td>
+				<td>1</td>
 			</tr>
 			<tr class="highlight">
 				<td><%= t('graph.criminal_subpoenas') %></td>
+				<td></td>
 				<td>1</td>
-				<td>
 			</tr>
 			<tr>
 				<td class="indent"><%= t('graph.usa') %></td>
-				<td>1</td>
 				<td><%= t('graph.doj') %></td>
+				<td>1</td>
 			</tr>
 		</table>
 	</div>
