privacy: Add pie graph for voluntary_disclosure
Change-Id: I6ca411879be64ef74498a85401617b637fef97de

--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -276,7 +276,9 @@
 		<li><a class="active voluntary_disclosure" id="voluntary_disclosure_juldec14" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2014</a></li>
 	</ul>
 	<div class="col-md-7">
-		<div id="voluntary_disclosure_graph" class="bar_graph_horizontal"></div>
+		<div id="voluntary_disclosure_graph" class="bar_graph_horizontal">
+			<img src="images/pie.png" alt="Voluntary Disclosure: Pie Graph">
+		</div>
 	</div>
 	<div class="clear"></div>
 	<br>
