--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -290,6 +290,9 @@
 <input type="hidden" id="t_request_granted" value="<%= t('graph.request_granted') %>">
 <input type="hidden" id="t_information_produced" value="<%= t('privacy.information_produced') %>">
 <input type="hidden" id="t_usa" value="<%= t('graph.usa') %>">
+<input type="hidden" id="t_israel" value="<%= t('graph.israel') %>">
+<input type="hidden" id="t_slovenia" value="<%= t('graph.slovenia') %>">
+<input type="hidden" id="t_china" value="<%= t('graph.china') %>">
 <input type="hidden" id="t_united_kingdom" value="<%= t('graph.united_kingdom') %>">
 <input type="hidden" id="t_france" value="<%= t('graph.france') %>">
 <input type="hidden" id="t_germany" value="<%= t('graph.germany') %>">
