privacy: Add totals to the govt_request table
Change-Id: I78c856061e6b77d41e10c8b26e61af3dff002a6e

--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -199,7 +199,7 @@
 			</tr>
 			<tr class="highlight">
 				<td><%= t('graph.warrant') %></td>
-				<td></td>
+				<td>Total</td>
 				<td>1</td>
 			</tr>
 			<tr>
@@ -209,7 +209,7 @@
 			</tr>
 			<tr class="highlight">
 				<td><%= t('graph.criminal_subpoenas') %></td>
-				<td></td>
+				<td>Total</td>
 				<td>1</td>
 			</tr>
 			<tr>
