content: Rename summary table and flip columns
Change-Id: I99099a0bef74690954732595634189d658f3eba7

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -73,44 +73,44 @@
 	<div class="story">
 		<h3>
 			<small><%= t('dates.jul') %> 2014 – <%= t('dates.dec') %> 2014</small><br />
-			<%= t('home.content') %>
+			<%= t('privacy.govt_requests') %>
 		</h3>
 		<hr />
 		<table>
 			<tr>
 				<td><%= t('graph.usa') %></td>
-				<td>1</td>
 				<td><%= t('graph.federal_agency') %></td>
+				<td>1</td>
 			</tr>
 			<tr>
 				<td><%= t('graph.germany') %></td>
-				<td>1</td>
 				<td><%= t('graph.municipal_government') %></td>
+				<td>1</td>
 			</tr>
 			<tr>
 				<td><%= t('graph.united_kingdom') %></td>
-				<td>1</td>
 				<td><%= t('graph.uknmd') %></td>
+				<td>1</td>
 			</tr>
 			<tr>
 				<td><%= t('graph.brazil') %></td>
-				<td>1</td>
 				<td><%= t('graph.politicians_candidates') %></td>
+				<td>1</td>
 			</tr>
 			<tr>
 				<td><%= t('graph.malaysia') %></td>
-				<td>1</td>
 				<td><%= t('graph.ministry') %></td>
+				<td>1</td>
 			</tr>
 			<tr>
 				<td><%= t('graph.turkey') %></td>
-				<td>1</td>
 				<td><%= t('graph.ministry') %></td>
+				<td>1</td>
 			</tr>
 			<tr>
 				<td><%= t('graph.israel') %></td>
-				<td>1</td>
 				<td><%= t('graph.municipal_government') %></td>
+				<td>1</td>
 			</tr>
 		</table>
 	</div>
