content: Add zero before decimal point in scorecard
Change-Id: I9853072c9066265c351ff5a6a60e1fe483a3c97d

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -19,7 +19,7 @@
     <h2><%= t('dates.jul') %> 2014 – <%= t('dates.dec') %> 2014</h2>
     <dl>
       <dt><%= t('content.percentage_of_requests_granted') %></dt>
-      <dd>.52<small>%</small></dd>
+      <dd><span class="three-decimal">0.52</span><small>%</small></dd>
     </dl>
   </section>
 </div>
