--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -378,6 +378,10 @@ blockquote {
 			text-align: center;
 			letter-spacing: -3.5px;
 
+			.three-decimal {
+				font-size: 80px;
+			}
+
 			small {
 				font-size: 40px;
 			}
