Updated quotes and images for quotes
Change-Id: I17bf5b37b48d4a0e691337c3851aa08372b2f3b2

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -34,7 +34,7 @@
   <blockquote>
     <p><%= t('content.quote') %></p>
     <footer>
-      <a href="//commons.wikimedia.org/wiki/Benjamin_Franklin#mediaviewer/File:Benjamin_Franklin.PNG"><img src="/images/quote_franklin.png"></a>
+      <a href="//commons.wikimedia.org/wiki/File:George_Orwell_press_photo.jpg"><img src="/images/quote_orwell.png"></a>
       <p><%= t('content.cite') %></p>
     </footer>
   </blockquote>
@@ -220,7 +220,7 @@
   <blockquote>
     <p><%= t('content.forgotten_quote') %></p>
     <footer>
-      <a href="//commons.wikimedia.org/wiki/File:Kyle-cassidy-neil-gaiman-April-2013.jpg"><img src="/images/quote_gaiman.png"></a>
+      <img src="/images/quote_netanel.png">
       <p><%= t('content.forgotten_cite') %></p>
     </footer>
   </blockquote>
