--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -35,7 +35,7 @@
 	<blockquote>
 		<p><%= t('privacy.quote') %></p>
 		<footer>
-			<a href="//commons.wikimedia.org/wiki/File:Niels_Bohr.jpg"><img src="/images/quote_bohr.png"></a>
+			<a href="//commons.wikimedia.org/wiki/File:Sonia_Sotomayor_in_SCOTUS_robe.jpg"><img src="/images/quote_sotomayor.png"></a>
 			<p><%= t('privacy.cite') %></p>
 		</footer>
 	</blockquote>
