Added new stories and the related images
Change-Id: Ia7361e91b03ea9e98d6b665e65255168c00d069b

--- a/source/localizable/stories.html.erb
+++ b/source/localizable/stories.html.erb
@@ -6,6 +6,61 @@
   </h1>
 </div>
 
+<!-- 2015 Stories-->
+<div class="col-md-4">
+  <div class="story">
+    <a href="//commons.wikimedia.org/wiki/Category:Vulpes_vulpes#/media/File:Kew_Gardens_-_London_-_September_2008_%282958753889%29.jpg"><img src="/images/story_stock.png"></a>
+    <h3><%= t('content.story_stock_title') %></h3>
+    <p><%= t('content.story_stock_body') %></p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a href="//commons.wikimedia.org/wiki/Barnstar#/media/File:Original_Barnstar_Hires.png"><img src="/images/story_barnstar.png"></a>
+    <h3><%= t('content.story_barnstar_title') %></h3>
+    <p><%= t('content.story_barnstar_body') %></p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a href="//commons.wikimedia.org/wiki/Wiki#/media/File:Chiodini_wiki.jpg"><img src="/images/story_identity.png"></a>
+    <h3><%= t('content.story_identity_title') %></h3>
+    <p><%= t('content.story_identity_body') %></p>
+  </div>
+</div>
+
+<div class="clear"></div>
+<br><br>
+
+<div class="col-md-4">
+  <div class="story">
+    <a href="//commons.wikimedia.org/wiki/Category:Interiors_of_museums#/media/File:Preusser,_Karl_Louis_-_In_der_Dresdner_Galerie_-_1881.jpg"><img src="/images/story_kempler.png"></a>
+    <h3><%= t('content.story_kempler_title') %></h3>
+    <p><%= t('content.story_kempler_body') %></p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a href="//commons.wikimedia.org/wiki/File:Screenshot_from_IMAX%C2%AE_3D_movie_Hidden_Universe_showing_the_Helix_Nebula_in_infrared.jpg"><img src="/images/story_guru.png"></a>
+    <h3><%= t('content.story_guru_title') %></h3>
+    <p><%= t('content.story_guru_body') %></p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a href="//commons.wikimedia.org/wiki/File:TaylorFillmore.jpg"><img src="/images/story_political.png"></a>
+    <h3><%= t('content.story_political_title') %></h3>
+    <p><%= t('content.story_political_body') %></p>
+  </div>
+</div>
+
+<div class="clear"></div>
+<br><br>
+
 <!-- New Content Alteration -->
 <div class="col-md-4">
   <div class="story">
