Add new date range and pie chart
Change-Id: I3d5132accdc3ab5a507d0d3473daccfe666bd67b

--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -273,11 +273,11 @@
 <div class="analytics">
 	<h2><%= t('privacy.graph_voluntary_disclosure') %></h2>
 	<ul class="tabs">
-		<li><a class="active voluntary_disclosure" id="voluntary_disclosure_juldec14" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2014</a></li>
+		<li><a class="active voluntary_disclosure" id="voluntary_disclosure_juldec14" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2015</a></li>
 	</ul>
 	<div class="col-md-7">
 		<div id="voluntary_disclosure_graph" class="bar_graph_horizontal">
-			<img src="images/pie.png" alt="Voluntary Disclosure: Pie Graph">
+			<img src="images/pie_june2015.png" alt="Voluntary Disclosure: Pie Graph">
 		</div>
 	</div>
 	<div class="clear"></div>
