Add DMCA by project data
Change-Id: Ib9a46fe17bafdd030e951211f17c4a89d910dadc

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -290,7 +290,8 @@
 			<li><a class="targeted_dmca_tabs" id="targeted_dmca_all" href="javascript: void(0);"><%= t('dates.all') %></a></li>
 			<li><a class="targeted_dmca_tabs" id="targeted_dmca_juldec13" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2013</a></li>
 			<li><a class="targeted_dmca_tabs" id="targeted_dmca_janjun14" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2014</a></li>
-			<li><a class="active targeted_dmca_tabs" id="targeted_dmca_juldec14" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2014</a></li>
+			<li><a class="targeted_dmca_tabs" id="targeted_dmca_juldec14" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2014</a></li>
+			<li><a class="active targeted_dmca_tabs" id="targeted_dmca_janjun15" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2015</a></li>
 		</ul>
 
 		<div class="col-md-4" id="targeted_dmca_granted">
@@ -391,6 +392,7 @@
 <input type="hidden" id="t_not_a_wmf_site" value="<%= t('graph.not_a_wmf_site') %>">
 <input type="hidden" id="t_korean_wikipedia" value="<%= t('graph.korean_wikipedia') %>">
 <input type="hidden" id="t_turkish_wikipedia" value="<%= t('graph.turkish_wikipedia') %>">
+<input type="hidden" id="t_tagalog_wikipedia" value="<%= t('graph.tagalog_wikipedia') %>">
 <input type="hidden" id="t_hebrew_wikipedia" value="<%= t('graph.hebrew_wikipedia') %>">
 <input type="hidden" id="t_slovak_wikipedia" value="<%= t('graph.slovak_wikipedia') %>">
 <input type="hidden" id="t_korean_wikinews" value="<%= t('graph.korean_wikinews') %>">
