Add DMCA by country
Change-Id: I524dc876eb5adc9870a2e2c79f4d23b6db9e236c

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -263,10 +263,8 @@
 			<li><a class="dmca_requests_tabs" id="dmca_requests_jul12jun13" href="javascript: void(0);"><%= t('dates.jul') %> 2012 - <%= t('dates.jun') %> 2013</a></li>
 			<li><a class="dmca_requests_tabs" id="dmca_requests_juldec13" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2013</a></li>
 			<li><a class="dmca_requests_tabs" id="dmca_requests_janjun14" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2014</a></li>
-			<li><a class="active dmca_requests_tabs" id="dmca_requests_juldec14" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2014</a></li>
-
-
-
+			<li><a class="dmca_requests_tabs" id="dmca_requests_juldec14" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2014</a></li>
+			<li><a class="active dmca_requests_tabs" id="dmca_requests_janjun15" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2015</a></li>
 		</ul>
 
 		<div class="col-md-4" id="dmca_requests_legend">
